[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/CommandPalettePopup/CommandPalettePopup.gd" type="Script" id=1]
[ext_resource path="res://addons/CommandPalettePopup/SettingsAdder.tscn" type="PackedScene" id=3]

[sub_resource type="Image" id=10]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 10 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Image" id=11]
data = {
"data": PoolByteArray( 23, 22, 26, 111, 29, 28, 33, 239, 32, 30, 36, 247, 33, 31, 37, 247, 33, 31, 37, 247, 33, 31, 37, 247, 33, 31, 37, 247, 32, 30, 36, 247, 29, 28, 33, 239, 23, 22, 26, 111, 29, 28, 33, 240, 36, 34, 41, 255, 40, 38, 45, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 45, 255, 36, 34, 41, 255, 29, 28, 33, 240, 32, 30, 36, 249, 40, 38, 45, 255, 43, 42, 49, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 43, 42, 49, 255, 40, 38, 45, 255, 32, 30, 36, 249, 33, 31, 37, 247, 40, 38, 46, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 40, 38, 46, 255, 33, 31, 37, 247, 33, 31, 37, 247, 40, 38, 46, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 40, 38, 46, 255, 33, 31, 37, 247, 33, 31, 37, 247, 40, 38, 46, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 40, 38, 46, 255, 33, 31, 37, 247, 33, 31, 37, 247, 40, 38, 46, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 40, 38, 46, 255, 33, 31, 37, 247, 32, 30, 36, 249, 40, 38, 45, 255, 43, 42, 49, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 43, 42, 49, 255, 40, 38, 45, 255, 32, 30, 36, 249, 29, 28, 33, 240, 36, 34, 41, 255, 40, 38, 45, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 45, 255, 36, 34, 41, 255, 29, 28, 33, 241, 23, 22, 26, 111, 29, 28, 33, 240, 32, 30, 36, 247, 33, 31, 37, 247, 33, 31, 37, 247, 33, 31, 37, 247, 33, 31, 37, 247, 32, 30, 36, 247, 29, 28, 33, 238, 23, 22, 26, 111 ),
"format": "RGBA8",
"height": 10,
"mipmaps": false,
"width": 10
}

[sub_resource type="ImageTexture" id=8]
flags = 4
flags = 4
image = SubResource( 11 )
size = Vector2( 10, 10 )

[sub_resource type="StyleBoxTexture" id=9]
texture = SubResource( 8 )
region_rect = Rect2( 0, 0, 10, 10 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[node name="CommandPalettePopup" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Command Palette"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PaletteMarginContainer"]
margin_right = 1004.0
margin_bottom = 575.0
size_flags_horizontal = 3

[node name="SearchFilter" type="HBoxContainer" parent="PaletteMarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 26.0

[node name="MarginContainer" type="MarginContainer" parent="PaletteMarginContainer/VBoxContainer/SearchFilter"]
margin_right = 869.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_constants/margin_right = 5

[node name="Filter" type="LineEdit" parent="PaletteMarginContainer/VBoxContainer/SearchFilter/MarginContainer"]
margin_right = 864.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 0 )
clear_button_enabled = true
right_icon = SubResource( 2 )
placeholder_text = "Type '?' to get help."
caret_blink = true
caret_blink_speed = 0.5

[node name="CopyButton" type="Button" parent="PaletteMarginContainer/VBoxContainer/SearchFilter"]
margin_left = 873.0
margin_right = 963.0
margin_bottom = 26.0
hint_tooltip = "Copies the file path to the clipboard if a file is selected. If the selection is a code snippet, the function gets copied."
text = "Copy Info"
icon = SubResource( 2 )

[node name="AddButton" type="Button" parent="PaletteMarginContainer/VBoxContainer/SearchFilter"]
margin_left = 967.0
margin_right = 1004.0
margin_bottom = 26.0
text = "Add"

[node name="MarginContainer" type="MarginContainer" parent="PaletteMarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 1004.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="PaletteMarginContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 1004.0
margin_bottom = 495.0
custom_styles/tab_fg = SubResource( 3 )
custom_styles/tab_disabled = SubResource( 4 )
custom_styles/tab_bg = SubResource( 5 )
custom_styles/panel = SubResource( 6 )
tabs_visible = false

[node name="ItemList" type="ItemList" parent="PaletteMarginContainer/VBoxContainer/MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
max_columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightInfoBox" type="RichTextLabel" parent="PaletteMarginContainer/VBoxContainer/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
bbcode_enabled = true

[node name="HSplitContainer" type="HBoxContainer" parent="PaletteMarginContainer/VBoxContainer"]
margin_top = 534.0
margin_right = 1004.0
margin_bottom = 575.0

[node name="CurrentLabel" type="Label" parent="PaletteMarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 484.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 9 )
text = "
"
valign = 3
clip_text = true

[node name="SwitchIcon" type="ToolButton" parent="PaletteMarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 488.0
margin_right = 516.0
margin_bottom = 41.0
hint_tooltip = "Double tapping the keyboard shortcut will also switch between the two recent files."
shortcut_in_tooltip = false
icon = SubResource( 2 )

[node name="LastLabel" type="Label" parent="PaletteMarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 520.0
margin_right = 1004.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 0.3 )
text = "
"
valign = 3
clip_text = true

[node name="SettingsAdder" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="PaletteMarginContainer/VBoxContainer/SearchFilter/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="PaletteMarginContainer/VBoxContainer/HSplitContainer/SwitchIcon" to="." method="_on_SwitchIcon_pressed"]
